--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
@@ -54,5 +55,5 @@
     "babel-loader": "^8.1.0",
     "react-is": "^16.13.1"
   },
-  "proxy":"http://localhost:8080"
+  "proxy": "http://localhost:8080"
 }
